# digicore_productivity_tools_suite

./: .gitignore  bulk_update_applock.py  bulk_update_profile.py  duplicates_review.json  merged_snippets_debug.json  parse_legacy_snippets.py
digicore/: .gitignore  CHANGELOG.md  Cargo.toml  README.md  README_Files-and-Images-OCR-Text-Extraction.md  README_Files-and-Images-OCR-Text-Extraction_rev001-BKUP.md
digicore/.cargo/: config.toml
digicore/.github/workflows/: ci.yml
digicore/crates/digicore-core/: Cargo.toml
digicore/crates/digicore-kms-ports/: Cargo.toml
digicore/crates/digicore-text-expander/: Cargo.toml  build.rs  build_error.txt  build_errors.json  cargo_err.txt  cargo_err_utf8.txt  check.err  debug_env.txt  diagnostics_eval.txt  diagnostics_fix_verify.txt  diagnostics_refine_verify.txt  diagnostics_refine_verify_v2.txt  diagnostics_sync.txt  diagnostics_sync_v2.txt  diagnostics_universal_debug.txt  diagnostics_universal_final.txt  diagnostics_universal_verify.txt  diagnostics_universal_verify_v2.txt  diagnostics_universal_verify_v3.txt  errors.json  errors.txt  errors_final.txt  final_verification.txt  final_verification_v2.txt  semantic_eval.txt  semantic_eval_v2.txt  semantic_final.txt  structured_eval_v2.txt  structured_eval_v3.txt  structured_eval_v4.txt  structured_eval_v5.txt  structured_sync.txt  test.err  test2.err  test_insta.err  test_insta.out  test_output.txt  test_results.txt  test_results_alignment.txt
digicore/docs/: README_Analytics_and_Diagnostics.md  README_Corpus_Generation.md  README_Testing_OCR-Text-Extraction-Engine-Regressions.md  architecture_v2.md  audit-ghost-follower-features-v1.md  audit-hardening-safety_implementation_plan.md  audit-hardening-safety_walkthrough.md  audit-scripting-engine-library-v1.md  audit-text-expansion-clipboard-v2.md  audit-text-expansion-clipboard.md  db-path-unification-audit_cf201762.plan_BKUP.md  implementation_plan.md  implementation_plan_Skill Hub Foundation (Backend).md  implementation_plan_advanced_kms.md  kms-embeddings-temporal-graph-semantic-search-hexagonal-plan-2026-03.md  kms-graph-doc-governance-map-2026-04.md  kms-graph-island-legend-followup-scope.md  kms-graph-prd-progress.md  kms-knowledge-graph-and-local-graph-audit-2026-03.md  kms-notebook-capabilities-audit-and-implementation-plan-2026-04.md  kms-smart-templates-guide.md  kms-ux-feature-gaps-and-opportunities-2026-04.md  kms_graph_3.0_roadmap.md  knowledge-graph-comprehensive-audit-and-roadmap-2026-03.md  knowledge-graph-features-audit-and-implementation-plan.md  prd-kms-graph-paged-view-and-per-vault-overrides.md  requirements_spec_v2.md  script_snippets.md  ticket-kms-note-favorites-ipc-and-ui.md  use_cases_v2.md  walkthrough.md  walkthrough_Advanced KMS Diagnostics & Maintenance (Phase 4).md  walkthrough_Skill Hub Implementation.md
digicore/docs/digicore-KMS-Knowledge-Management-Suite/: Configurable KMS Vault Path & Settings UI_iw7H.md  Enhanced Semantic Search Reporting & Granular Indexing_scBm.md  Enhanced Semantic Search Reporting & Granular Indexing_w4Zp.md  Implementation Plan Phase 76 - KMS Foundation & Vault Initialization_V1Xe.md  Implementation Plan Phase 77 - KMS Hybrid Editor Core_to0h.md  Implementation-Plan_Phase 78b KMS Hybrid Search Plan_dFJP.md  KMS Link Graph & Bi-directional Logic (Phase 79)_YgoK.md  KMS Link Graph & Bi-directional Logic (Phase 79)_moZ7.md  KMS Semantic Search & Vector Integration_GWnv.md  KMS Semantic Search & Vector Integration_POST-MULTI-MODAL_E6B2.md  KMS Vault Auto-Synchronization Plan_yQVQ.md  KMS_Advanced_Robustness_Strategy.md  KMS_Explorer_Enhancement_Plan.md  Phase 78b KMS Hybrid Search Setup (FTS5 + Vector AI)_Ii3Z.md  TASKS_Planned-Ph76-80_vidx.md  TASKS_Unified Semantic Search Implementation_ixRM.md  TASKS_thru80_Task Unify App Data Paths and Fix Image Persistence_W0FI.md  Tasks_2d4a.md  Unified Multi-Modal Semantic Search (Phase 78)_GWmS.md  Unified Multi-Modal Semantic Search (Phase 78)_Qtyn.md  Walkthrough - Enhanced Semantic Search Reporting & Granular Indexing_gBzp.md  Walkthrough - Phase 77 KMS Hybrid Editor Core_iOFc.md  Walkthrough - Phase 78 Multi-Modal Semantic Search & Vector Integration_5H8A.md  Walkthrough - Slash Normalization & Background Sync Fixes_Yns8.md  Walkthrough - Unified Semantic Search_utdT.md  Walkthrough Backlink Fixes & Sync Robustness_6jys.md  Walkthrough KMS Configurable Vault Path Implementation_RcXf.md  Walkthrough Phase 76 - KMS Foundation & Vault Initialization_mJxa.md  implementation_plan_COMMITS.md  implementation_plan_deletion_robustness.md  implementation_plan_explorer_advanced.md  implementation_plan_kms_diagnostics.md  implementation_plan_kms_explorer.md  implementation_plan_kms_hybrid_search.md  implementation_plan_kms_search_ux.md  implementation_plan_robustness_88.md  kms-audit-rendering-v1.md  task.md  walkthrough.md  walkthrough_deletion_robustness.md  (+4 more)
digicore/docs/digicore-copy-to-clipboard/: 0768.md  0GoI.md  5tlw.md  7RkR.md  7ZGR.md  9OTJ.md  BU9m.md  BaRZ.md  CLIPBOARD_IMAGE_SUPPORT_ANALYSIS_AND_ROLLOUT.md  COPY_TO_CLIPBOARD_SQLITE_MIGRATION_AUDIT.md  EQEw.md  EqdQ.md  Erjq.md  F108.md  G5Al.md  GsEV.md  Implementation Plan - Phase 53 Advanced Table Semantics & Export_D0ot.md  Implementation Plan - Phase 54 Final Profiling & Dependency Audit_4eYP.md  Implementation-PLAN_m8EN.md  Mzdl.md  OCR_IMPLEMENTATION_PLAN.md  Ontl.md  Phase 56 Comprehensive Documentation Generation (Phases 12-55)_HV8P.md  Phase 66 Image Library & Layout OCR Viewer_IMAGE-GALLERY_Implementation Plan - bNiv.md  Phase 66 Image Library & Layout OCR Viewer_IMAGE-GALLERY_Walkthrough-Completed_izw8.md  ROADMAP_OCR Roadmap v3 Resilience & Expansion_bsRV.md  RgBz.md  SvS4.md  TASKS_thru56_Unify App Data Paths and Fix Image Persistence_fxiK.md  TFAq.md  VvR8.md  WALKTHROUGH_50_COMPLETED_Phase 50 Dashboard Elite UX PolishmDRO.md  (+32 more)
digicore/scripts/: build.ps1  dev-tauri-kms-debug.ps1  test.ps1
digicore/tauri-app/: ghost-follower.html  ghost-suggestor.html  index.html  package-lock.json  package.json  quick-search.html  tailwind.config.js  variable-input.html  vite.config.ts
(+2121 files in other folders)
