[workspace]
resolver = "2"
members = [
    "crates/digicore-core",
    "crates/digicore-kms-ports",
    "crates/digicore-text-expander",
    "tauri-app/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["DigiCore Services LLC"]
description = "DigiCore Services - Cross-platform app ecosystem"
license = "Proprietary"
repository = ""
