[package]
name = "digicore-text-expander"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Text Expander - DigiCore Services"

[lib]
path = "src/lib.rs"

[[bin]]
name = "digicore-text-expander"
path = "src/main.rs"

[dependencies]
arboard = "3.3"
base64 = "0.22"
boa_engine = "0.20"
digicore-core = { path = "../digicore-core", features = ["platform-windows", "sync"] }
eframe = { version = "0.29", features = ["persistence"] }
egui = "0.29"
dirs = "5.0"
anyhow = "1.0"
chrono = "0.4"
meval = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "default-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
rand = "0.8"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_UI_Input_KeyboardAndMouse"] }
winrt-toast-reborn = "0.3"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[dev-dependencies]
serial_test = "3"
