[package]
name = "digicore-text-expander"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Text Expander - DigiCore Services"

[lib]
path = "src/lib.rs"

[[bin]]
name = "digicore-text-expander"
path = "src/main.rs"
required-features = ["gui-egui"]

[[bin]]
name = "digicore-text-expander-tauri"
path = "src/main_tauri.rs"
required-features = ["gui-tauri"]

[features]
default = ["gui-egui"]
gui-egui = ["eframe", "egui"]
gui-tauri = []  # Tauri app in tauri-app/; lib provides adapters

[dependencies]
arboard = "3.3"
aho-corasick = "1.1"
base64 = "0.22"
async-trait = "0.1"
boa_engine = "0.20"
digicore-core = { path = "../digicore-core", features = ["platform-windows", "sync"] }
eframe = { version = "0.29", features = ["persistence"], optional = true }
egui = { version = "0.29", optional = true }
dirs = "5.0"
anyhow = "1.0"
chrono = "0.4"
evalexpr = "13.1.0"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }
rand = "0.8"
rfd = "0.17"
serde = { version = "1.0", features = ["derive"] }
once_cell = "1.21"
serde_json = "1.0"
regex = "1.10"
rusqlite = { version = "0.31", features = ["bundled"] }
image = "0.25"
uuid = { version = "1.0", features = ["v4"] }
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_System_Threading", "Win32_System_LibraryLoader", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_DataExchange", "Win32_UI_Shell", "Media_Ocr", "Graphics_Imaging", "Storage_Streams", "Foundation_Collections"] }
winrt-toast-reborn = "0.3"

strsim = "0.11"
log = "0.4"
csv = "1.4.0"
serde_yaml = "0.9.34"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[build-dependencies]
embed-manifest = "1"

[dev-dependencies]
serial_test = "3"
tempfile = "3.10"
insta = "1.39"
