[package]
name = "digicore-text-expander-tauri"
version = "0.1.0"
edition = "2021"
description = "DigiCore Text Expander - Tauri backend"
authors = ["DigiCore Services LLC"]

[lib]
name = "app_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
digicore-text-expander = { path = "../../crates/digicore-text-expander", default-features = false, features = ["gui-tauri"] }
digicore-core = { path = "../../crates/digicore-core", features = ["platform-windows", "sync"] }
arboard = "3.3"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
log = "0.4"
