[package]
name = "digicore-text-expander-tauri"
version = "0.1.0"
edition = "2021"
description = "DigiCore Text Expander - Tauri backend"
authors = ["DigiCore Services LLC"]

[lib]
name = "app_lib"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "tray-icon"] }
taurpc = "0.7"
specta = { version = "=2.0.0-rc.22", features = ["derive", "chrono"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
tauri-plugin-shell = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-notification = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
digicore-text-expander = { path = "../../crates/digicore-text-expander", default-features = false, features = ["gui-tauri"] }
digicore-core = { path = "../../crates/digicore-core", features = ["platform-windows", "sync", "specta"] }
arboard = "3.3"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-dialog = "2"
tauri-plugin-prevent-default = "4"
tauri-plugin-http = "2"
tauri-plugin-fs = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-store = "2"
sysinfo = "0.33"
sha2 = "0.10"
base64 = "0.22"
ed25519-dalek = "2.1"
rand = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
regex = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
chrono = "0.4"
anyhow = "1.0"
thiserror = "2.0"
fastembed = { version = "5.12.0", features = ["ort-download-binaries-rustls-tls"] }
sqlite-vec = "0.1"
windows = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security_Cryptography",
  "Win32_System_Memory",
] }
notify = "6.1"
async-trait = "0.1.89"
dashmap = "6.1.0"
walkdir = "2"
git2 = "0.19"

[dev-dependencies]
tempfile = "3.10"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-log = "2"
tauri-plugin-deep-link = "2"
log = "0.4"
tauri-plugin-positioner = "2"
